# 2d-game

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  main.cpp  main2.cpp  main3.cpp  package-lock.cmake
.github/workflows/: build-windows.yml  build.yml
cmake/: cpm-dependencies.cmake  project-cpack.cmake
modules/space/: CMakeLists.txt  engine.space.cppm
modules/space/include/engine/: space.hpp
modules/space/space/: engine.space.components.cppm  engine.space.components_impl.cppm  engine.space.components_private.cppm  engine.space.spatial.cppm  engine.space.systems.cppm
modules/space/src/: SpatialHash.cpp  SpatialHash.hpp  space-components.cpp  space-systems.cpp  space.cpp
modules/spatial/: CMakeLists.txt  engine.spatial.cppm  engine.spatial.xy_iterator.cppm
modules/spatial/spatial/: engine.spatial.components.cppm  engine.spatial.xy_iterator.cppm
modules/spatial/test/: xy_iterator.test.cpp
modules/window/: CMakeLists.txt  engine.graphics.colors.cppm  engine.graphics.cppm  engine.window.cppm  engine.window.sfml.cppm  graphics.components.cppm  graphics.components.internal.cppm  graphics.cppm  graphics.systems.cppm  window.cppm
modules/window/graphics/: engine.graphics.components.cppm  engine.graphics.components_impl.cppm  engine.graphics.components_internal.cppm  engine.graphics.systems.cppm
modules/window/include/engine/: graphics.hpp  window.hpp
modules/window/include/engine/graphics/: components.hpp  predefined-colors.hpp
modules/window/include/engine/window/: components-sfml.hpp  components.hpp  event.hpp
modules/window/src/: graphics-components-private.hpp  graphics-components.cpp  graphics-systems.cpp  graphics.cpp  window-components.cpp  window-systems.cpp  window.cpp
modules/window/window/: engine.window.components.cppm  engine.window.components_impl.cppm  engine.window.systems_impl.cppm
tmp_stuff/: StupidSpatial.cpp  StupidSpatial.hpp
